Update Pre elements width to avoid overflow

--- a/public/index.css
+++ b/public/index.css
@@ -165,7 +165,7 @@ pre {
   transform: translateX(-50vw);
 
   line-height: 1.414;
-  width: calc(100vw + 4px);
+  width: 100vw;
   max-width: calc(100% + (var(--padding-inline) * 2));
   overflow-y: hidden;
   overflow-x: auto;
